@@ -163,8 +163,12 @@ public class CoordinatorHttpSolrCall extends HttpSolrCall {
                 10,
                 TimeUnit.SECONDS,
                 docCollection -> {
-                  for (Replica nodeNameSyntheticReplica :
-                      docCollection.getReplicas(solrCall.cores.getZkController().getNodeName())) {
+                  List<Replica> replicas =
+                      docCollection.getReplicas(solrCall.cores.getZkController().getNodeName());
+                  if (replicas == null || replicas.isEmpty()) {
+                    return false;
+                  }
+                  for (Replica nodeNameSyntheticReplica : replicas) {
                     if (nodeNameSyntheticReplica.getState() == Replica.State.ACTIVE) {
                       return true;
                     }
